QUIZ-7 : Add the possibility to display a quiz step by step. Correction of sonar issues. QUIZ-8 : Start of the adding of the possibility to display results of the quiz after each step.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/collaboration/plugin-quiz@53570 bab10101-e421-0410-a517-8ce0973de3ef